--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/GeodanDemo/ahn-viewer#readme",
   "dependencies": {
-    "leaflet": "^1.3.1"
+    "leaflet": "^1.3.1",
+    "proj4": "^2.4.4",
+    "proj4leaflet": "^1.0.2"
   }
 }
